<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context="com.example.catalina.thefastcooker.AltaUsuario">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/btn_alta_usuario"
        android:id="@+id/textView"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="0dp">
    <EditText
        android:id="@+id/email_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:hint="@string/email"
        android:focusable="true"
        android:focusableInTouchMode="true" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_contra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText">
    <EditText
        android:id="@+id/contra_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:hint="@string/contraseña"
        android:focusable="true"
        android:focusableInTouchMode="true" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText">
    <EditText
        android:id="@+id/nombre_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:hint="@string/nombre"
        android:focusable="true"
        android:focusableInTouchMode="true" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_apellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText">
    <EditText
        android:id="@+id/apellidos_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:hint="@string/apellidos"
        android:focusable="true"
        android:focusableInTouchMode="true"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText">
    <EditText
        android:id="@+id/direccion_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:hint="@string/direccion"
        android:focusable="true"
        android:focusableInTouchMode="true"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText">
    <EditText
        android:id="@+id/telefono_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:hint="@string/telefono"
        android:focusable="true"
        android:focusableInTouchMode="true"/>
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true">
    </ImageView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cargarGaleria"
        android:onClick="cargarGaleriaImgs"
        android:id="@+id/btnCargarGaleriaImgs" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:id="@+id/registrarse" />


</LinearLayout>
</ScrollView>