<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.catalina.thefastcooker.FragmentDetailComida">


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linear1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:textSize="25sp"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/titulo"
            android:id="@+id/titulo"
            android:layout_margin="10dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/alt_imagen_comida">
        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/descripcion"
            android:id="@+id/descripcion"
            android:layout_margin="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/requisitos_cocina"
            android:id="@+id/cocina"
            android:layout_margin="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/requisitos_menaje"
            android:id="@+id/menaje"
            android:layout_margin="10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/precio"
            android:textColor="@android:color/holo_blue_dark"
            android:id="@+id/precio"
            android:background="@color/black"
            android:textStyle="bold"
            android:layout_margin="10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/duracion"
            android:textColor="@android:color/holo_blue_dark"
            android:id="@+id/duracion"
            android:textStyle="bold"
            android:background="@color/black"
            android:layout_margin="10dp"
            />
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
            android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:background="#f0f08a">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:text="Detalles de la Reserva"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"/>


        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/in_date"
            android:layout_below="@+id/editText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Elige Fecha"
            android:id="@+id/btn_date"
            android:layout_alignBottom="@+id/in_date"
            android:layout_toRightOf="@+id/in_date"
            android:layout_toEndOf="@+id/in_date" />


        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/in_time"
            android:hint="10:00-22.00"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_below="@+id/in_date"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Elige Hora"
            android:id="@+id/btn_time"
            android:layout_below="@+id/btn_date"
            android:layout_alignLeft="@+id/btn_date"
            android:layout_alignStart="@+id/btn_date" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Elige numero de comensales"
            android:id="@+id/comensales"
            android:layout_below="@+id/in_time"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <Spinner
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:id="@+id/comboComensales"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/btn_time"
            android:layout_alignLeft="@+id/btn_time"
            android:layout_alignStart="@+id/btn_time" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/preciototal"
                android:text="Precio Total"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:layout_below="@+id/comensales"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reservar"
            android:id="@+id/reservar" />
    </LinearLayout>
    </ScrollView>
</FrameLayout>
